<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dafin.lab2.UserPref">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginBottom="438dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="46dp"
        android:text="@string/txtType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prefTypeSpin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/prefTypeSpin"
        android:layout_width="156dp"
        android:layout_height="31dp"
        android:layout_marginBottom="434dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="367dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="49dp"
        android:text="@string/txtItem2Display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prefCountSpin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefTypeSpin" />

    <Spinner
        android:id="@+id/prefCountSpin"
        android:layout_width="102dp"
        android:layout_height="42dp"
        android:layout_marginBottom="358dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/prefTypeSpin" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="282dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="65dp"
        android:text="@string/txtFetchTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prefFetchSpin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/prefFetchSpin"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:layout_marginBottom="273dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/prefCountSpin" />

    <EditText
        android:id="@+id/urlInput"
        android:layout_width="355dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/addUrl"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="52dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlInput" />


</android.support.constraint.ConstraintLayout>